unpackaged/main/default/objects/NF_Case_Scenario__c/NF_Case_Scenario__c.object-meta.xml
<CustomObject>
    <description>Used to categorize Cases</description>
    <label>Case Scenario</label>
    <nameField>
        <label>Case Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>