unpackaged/main/default/objects/NF_Case_Scenario__c/fields/NF_Scenario__c.field-meta.xml
<CustomField>
    <fullName>NF_Scenario__c</fullName>
    <description>Returns the Scenario (string to the right of the colon) of a Case Scenario&#39;s name for reporting, list views, etc.</description>
    <formula>RIGHT(Name, (LEN(Name)-(FIND(&#39;: &#39;, Name))))</formula>
    <label>Scenario</label>
    <type>Text</type>
</CustomField>