unpackaged/main/default/objects/NF_Case_Scenario__c/fields/NFActive__c.field-meta.xml
<CustomField>
    <fullName>NFActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether or not the Case Scenario record is active for use in lookup filters, reports, etc.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>