unpackaged/main/default/objects/NF_Case_Scenario__c/fields/NFScenarioCategory__c.field-meta.xml
<CustomField>
    <fullName>NFScenarioCategory__c</fullName>
    <description>Returns the Category (string to the left of the colon) of a Case Scenario&#39;s name for reporting, list views, etc.</description>
    <formula>LEFT( Name , (FIND(&#39;:&#39;, Name)-1))</formula>
    <label>Scenario Category</label>
    <type>Text</type>
</CustomField>