unpackaged/main/default/objects/NF_Case_Scenario__c/fields/ValidationRuleBypass__c.field-meta.xml
<CustomField>
    <fullName>ValidationRuleBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in automations to bypass any validation rule restrictions on the Case Scenario object</description>
    <label>Validation Rule Bypass</label>
    <type>Checkbox</type>
</CustomField>