unpackaged/main/default/objects/NF_Case_Scenario__c/validationRules/ScenarioNameEditIssue.validationRule-meta.xml
<ValidationRule>
    <fullName>ScenarioNameEditIssue</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Name), 
NOT(ISCHANGED( ValidationRuleBypass__c)),
$Profile.Name != &quot;SYSTEM ADMINISTRATOR&quot;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Case Scenario Name can only be changed by using the Edit button</errorMessage>
</ValidationRule>