unpackaged/main/default/objects/NF_Case_Scenario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NFActive__c</columns>
    <columns>NFScenarioCategory__c</columns>
    <columns>NF_Scenario__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>